--- a/starter/style.css
+++ b/starter/style.css
@@ -129,6 +129,29 @@ main {
   margin-right: 0.7rem;
 }
 
+.btn2 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #444;
+  background: none;
+  border: none;
+  font-family: inherit;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.2s;
+
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
+
+  padding: 0.7rem 2.5rem;
+  border-radius: 50rem;
+  box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+}
+
 .btn--new {
   top: 4rem;
 }
@@ -137,6 +160,11 @@ main {
 }
 .btn--hold {
   top: 46.1rem;
+}
+
+.btn--howto {
+  top: 53rem;
+  left: 10rem;
 }
 
 .btn:active {
@@ -148,6 +176,14 @@ main {
   outline: none;
 }
 
+.btn2:active {
+  transform: translate(-50%, 3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+}
+
+.btn2:focus {
+  outline: none;
+}
 .dice {
   position: absolute;
   left: 50%;
