--- a/starter/style.css
+++ b/starter/style.css
@@ -36,6 +36,15 @@ main {
   display: flex;
 }
 
+h1 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
 .player {
   flex: 50%;
   padding: 9rem;
@@ -162,8 +171,8 @@ main {
   top: 46.1rem;
 }
 
-.btn--howto {
-  top: 53rem;
+.show-modal {
+  top: 47.4rem;
   left: 10rem;
 }
 
@@ -202,6 +211,66 @@ main {
   color: #4436c7;
 }
 
+.show-modal {
+  position: absolute;
+  top: 54rem;
+  left: 10rem;
+  transform: translateX(-50%);
+  color: #444;
+  background: none;
+  border: none;
+  font-family: inherit;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 400;
+  transition: all 0.2s;
+
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
+
+  padding: 0.7rem 2.5rem;
+  border-radius: 50rem;
+  box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 2.8rem;
+  color: #444;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
 .hidden {
-  visibility: hidden;
+  display: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 4rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
